feat: 补齐 ETL 参数契约与版本化 schema